--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -40,7 +40,7 @@ a, a:visited {
   float: left;
   left: 37px;
   position: relative;
-  width: 290px;
+  width: 70%;
   border-bottom: 1px solid #eee;
   margin-top: 20px;
   margin-bottom: 12px; }
@@ -49,24 +49,6 @@ a, a:visited {
   width: 20px;
   height: 20px; }
 
-@media only screen and (max-width: 800px) {
-  .articulo {
-    width: 200px; }
-
-  .optiones_comentarios {
-    right: 50px; } }
-@media only screen and (max-width: 900px) {
-  .articulo {
-    width: 180px; } }
-@media only screen and (max-width: 1200px) and (min-width: 900px) {
-  .articulo {
-    width: 180px; }
-
-  .opciones_comentarios {
-    margin-right: 50px; } }
-@media only screen and (max-width: 1300px) and (min-width: 1200px) {
-  .articulo {
-    width: 180px; } }
 .h22 {
   margin: 1px 0 7px;
   font-size: 1.2rem;
@@ -89,11 +71,10 @@ a, a:visited {
   top: 9px;
   left: 9px;
   cursor: pointer;
-  box-shadow: 0 1px 1px #1e88e5;
-  border: 1px solid #eee;
+  box-shadow: 0 1px 5px rgba(30, 136, 229, 0.15);
   padding: 0 0;
-  width: 120px;
-  height: 140px;
+  width: 20%;
+  height: 20%;
   border-radius: 3px;
   overflow: hidden; }
 
@@ -517,7 +498,7 @@ a.fontawesome-cog:hover {
 .optiones_comentarios {
   position: relative;
   display: block;
-  width: 100%;
+  width: 90%;
   height: auto; }
 .optiones_comentarios ul li {
   list-style-type: none;
@@ -613,7 +594,7 @@ a.fontawesome-cog:hover {
   display: inline-block;
   position: relative;
   bottom: 55px;
-  margin-right: 10px;
+  margin-right: 1.5%;
   border: 1px solid transparent;
   padding: 7px;
   border-radius: 3px;
@@ -626,18 +607,6 @@ a.fontawesome-cog:hover {
 .wrapper-reply .enviar:hover {
   color: #1e88e5;
   border: 1px solid #1e88e5; }
-
-.wrapper-reply .triangle-reply {
-  width: 10px;
-  height: 10px;
-  background-color: #1e88e5;
-  border: 1px solid #1e88e5;
-  position: relative;
-  margin: auto;
-  -webkit-transform: rotate(45deg);
-  -moz-trasnform: rotate(45deg);
-  transform: rotate(45deg);
-  top: -5px; }
 
 .wrapper-reply textarea {
   margin: auto;
