--- a/skyfolk/static/css/avatar.css
+++ b/skyfolk/static/css/avatar.css
@@ -1,32 +1,26 @@
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-
-body {
-  font-size: 11.5px !important;
-  font-style: normal;
-  font-weight: 300;
-  font-family: "Open Sans", sans-serif !important;
-  color: #555; }
-
-.delete-profile-image, .add-profile-image {
+.delete-profile-image,
+.add-profile-image {
   font-size: 2em; }
-  .delete-profile-image .fa-trash, .delete-profile-image .fa-plus, .add-profile-image .fa-trash, .add-profile-image .fa-plus {
+  .delete-profile-image .fa-trash,
+  .delete-profile-image .fa-plus,
+  .add-profile-image .fa-trash,
+  .add-profile-image .fa-plus {
     color: #555;
     padding: 7px;
-    -webkit-transition: all 0.2s ease-out 0s;
-    -moz-transition: all 0.2s ease-out 0s;
     transition: all 0.2s ease-out 0s; }
-  .delete-profile-image .fa-trash, .add-profile-image .fa-trash {
+  .delete-profile-image .fa-trash,
+  .add-profile-image .fa-trash {
     float: left;
     margin-left: 7px; }
-    .delete-profile-image .fa-trash:hover, .add-profile-image .fa-trash:hover {
-      color: tomato; }
-  .delete-profile-image .fa-plus, .add-profile-image .fa-plus {
+    .delete-profile-image .fa-trash:hover,
+    .add-profile-image .fa-trash:hover {
+      color: #ff6347; }
+  .delete-profile-image .fa-plus,
+  .add-profile-image .fa-plus {
     float: right;
     margin-right: 7px; }
-    .delete-profile-image .fa-plus:hover, .add-profile-image .fa-plus:hover {
+    .delete-profile-image .fa-plus:hover,
+    .add-profile-image .fa-plus:hover {
       color: #1e88e5; }
 
 .wrapper-p .current-avatar {
@@ -37,10 +31,9 @@ body {
   font-size: 1.4em; }
   .wrapper-p .current-avatar #id_choices li {
     width: 100%; }
-  .wrapper-p .current-avatar img, .wrapper-p .current-avatar p {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
+  .wrapper-p .current-avatar img,
+  .wrapper-p .current-avatar p {
+    margin: 30px auto 0 auto;
     text-align: center;
     display: block; }
   .wrapper-p .current-avatar p {
@@ -160,24 +153,23 @@ body {
     display: none; }
 
 input {
+  background-color: transparent;
   border: medium none;
   border-radius: 2px;
   display: inline-block;
+  cursor: pointer;
   height: 36px;
+  color: #1e88e5;
   line-height: 36px;
   margin-top: 15px;
-  padding: 0px 2rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #1e88e5;
-  background-color: transparent;
-  text-align: center;
   letter-spacing: 0.5px;
+  text-align: center;
+  padding: 0 2rem;
+  outline: none;
   transition: all 0.2s ease-out 0s;
-  cursor: pointer;
-  outline: none; }
+  text-transform: uppercase;
+  text-decoration: none; }
   input:hover {
-    opacity: 0.8;
-    background-color: #eee; }
+    background-color: rgba(255, 255, 255, 0.8); }
 
 /*# sourceMappingURL=avatar.css.map */
