--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -33,10 +33,10 @@
         <li id="loader"></li>
     </ul>
     </nav>
-    <script async src="{{STATIC_URL}}js/jquery.min.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery.min.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/jquery-ui.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/jquery.easytabs.js" type="text/javascript"></script>
-    <script async src="{{STATIC_URL}}js/jquery.hashchange.js" type="text/javascript"></script>
+    <script async src="{{STATIC_URL}}js/jquery.hashchange.min.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/jquery.gritter.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/profile.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/jquery.colorbox.js" type="text/javascript"></script>
