+ V2 + Estadisticas de usuario: Num de seguidores y seguidos

--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -61,6 +61,8 @@
                     <h1 class="info-user-name">{{ user_profile.username }}</h1>
                     <h3 class="info-user-name_last">{{user_profile.first_name}} {{user_profile.last_name}}</h3>
                     <h4 class="info-user-ciudad"><i class="fa fa-map-marker"></i>Mi ciudad</h4>
+                    <h4 class="info-user-stats">Seguidores: {{followers}}</h4>
+                    <h4 class="info-user-stats">Seguidos: {{following}} </h4>
                         <div class="info-event">
                         </div>
                         <div class="info-groups">
