--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1424,7 +1424,7 @@ ul.table > li {
   background-repeat: no-repeat;
   border-radius: 100%;
   margin-right: 75px;
-  margin-top: 95px;
+  margin-top: 75px;
   display: inline;
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -1441,7 +1441,7 @@ ul.table > li {
   background-repeat: no-repeat;
   border-radius: 100%;
   margin-right: 15px;
-  margin-top: 45px;
+  margin-top: 25px;
   display: inline;
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -1465,10 +1465,16 @@ ul.table > li {
   width: 90px;
   height: 90px;
   margin-top: 50px;
+  border-radius: 100%;
   position: relative;
   margin-left: auto;
   margin-right: auto; }
-  .info-paw .info-wrapper-pic img {
+
+.info-paw .info-user-stats {
+  text-align: center;
+  font-size: 1.1em;
+  margin-top: 10px; }
+  .info-paw .info-user-stats img {
     border-radius: 100%;
     border: 2px solid #1976d2; }
 
@@ -1485,6 +1491,10 @@ ul.table > li {
   width: 92px;
   height: 92px;
   border-radius: 100%; }
+  .info-paw .info-user-pic img {
+    border-radius: 100%;
+    width: 100%;
+    height: 100%; }
 
 .trofeos {
   position: absolute;
