--- a/skyfolk/static/sass/miperfil.sass
+++ b/skyfolk/static/sass/miperfil.sass
@@ -1257,7 +1257,7 @@ ul.table > li
   background-repeat: no-repeat
   border-radius: 100%
   margin-right: 75px
-  margin-top: 95px
+  margin-top: 75px
   display: inline
   transition: all .3s ease-in-out
   -webkit-transition: all .3s ease-in-out
@@ -1274,7 +1274,7 @@ ul.table > li
   background-repeat: no-repeat
   border-radius: 100%
   margin-right: 15px
-  margin-top: 45px
+  margin-top: 25px
   display: inline
   transition: all .3s ease-in-out
   -webkit-transition: all .3s ease-in-out
@@ -1298,10 +1298,15 @@ ul.table > li
   width: 90px
   height: 90px
   margin-top: 50px
+  border-radius: 100%
   position: relative
   margin-left: auto
   margin-right: auto
 
+.info-paw .info-user-stats
+  text-align: center
+  font-size: 1.1em
+  margin-top: 10px
 
   & img
     border-radius: 100%
@@ -1320,6 +1325,11 @@ ul.table > li
   width: 92px
   height: 92px
   border-radius: 100%
+
+  & img
+    border-radius: 100%
+    width: 100%
+    height: 100%
 
 .trofeos
   position: absolute
