+ V2 + Optimizando uso de JS + Separacion parte común JS (core.js) + profile.js

--- a/skyfolk/static/sass/miperfil.sass
+++ b/skyfolk/static/sass/miperfil.sass
@@ -393,7 +393,7 @@ body > .container
   width: 20%
   min-height: 100px
   display: inline-block
-  background-image: url('http: //parentesis.com/imagesPosts/taylor-swift-2014-sarah-barlow-billboard-650.jpg')
+  background-color: transparent
   background-repeat: no-repeat
   border: 2px solid #fff
   background-size: 100%
@@ -713,7 +713,7 @@ body > .container
 
 .video-player
   background: #bdbdbd
-  background-image: url('https: //d13yacurqjgara.cloudfront.net/users/507883/screenshots/2214064/andy_hau_quinnsquips_quinn_the_fox_dribbble_1.gif')
+  background-image: url('https://d13yacurqjgara.cloudfront.net/users/507883/screenshots/2214064/andy_hau_quinnsquips_quinn_the_fox_dribbble_1.gif')
   background-size: 100%
   background-position: center
   background-repeat: no-repeat
