--- a/skyfolk/templates/account/base.html
+++ b/skyfolk/templates/account/base.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
+    <link rel="icon" type="image/ico" href="{{ STATIC_URL }}img/favicon.ico"/>
   </head>
   <body>
     {% block body %}
