--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -93,43 +93,43 @@
                       <h3 class="grupos-title">Grupos de {{ user_profile.username }}</h3>
                       <div class="col-lg-12 col-md-12 col-sm-12 wrapper-grupos">
                           <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
-                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
+                              <img src="{{STATIC_URL}}img/nuevo.png"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                               <i class="fa fa-users"> 50</i>
                               <i class="fa fa-heart"> 12</i>
                           </div>
                           <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
-                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
+                              <img src="{{STATIC_URL}}img/nuevo.png"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                               <i class="fa fa-users"> 50</i>
                               <i class="fa fa-heart"> 12</i>
                           </div>
                           <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
-                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
+                              <img src="{{STATIC_URL}}img/nuevo.png"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                               <i class="fa fa-users"> 50</i>
                               <i class="fa fa-heart"> 12</i>
                           </div>
                           <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
-                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
+                              <img src="{{STATIC_URL}}img/nuevo.png"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                               <i class="fa fa-users"> 50</i>
                               <i class="fa fa-heart"> 12</i>
                           </div>
                           <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
-                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
+                              <img src="{{STATIC_URL}}img/nuevo.png"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                               <i class="fa fa-users"> 50</i>
                               <i class="fa fa-heart"> 12</i>
                           </div>
                           <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
-                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
+                              <img src="{{STATIC_URL}}img/nuevo.png"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                               <i class="fa fa-users"> 50</i>
                               <i class="fa fa-heart"> 12</i>
                           </div>
                           <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
-                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
+                              <img src="{{STATIC_URL}}img/nuevo.png" alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                               <i class="fa fa-users"> 50</i>
                               <i class="fa fa-heart"> 12</i>
