--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -35,11 +35,7 @@
     </nav>
     <script src="{{STATIC_URL}}js/jquery.min.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/jquery-ui.js" type="text/javascript"></script>
-    <script async src="{{STATIC_URL}}js/jquery.easytabs.js" type="text/javascript"></script>
-    <script async src="{{STATIC_URL}}js/jquery.hashchange.min.js" type="text/javascript"></script>
-    <script async src="{{STATIC_URL}}js/jquery.gritter.js" type="text/javascript"></script>
-    <script async src="{{STATIC_URL}}js/profile.js" type="text/javascript"></script>
-    <script async src="{{STATIC_URL}}js/jquery.colorbox.js" type="text/javascript"></script>
+    <script async src="{{STATIC_URL}}js/core.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/jquery.shorten.1.0.js" type="text/javascript"></script>
     <!-- <script async src="{{STATIC_URL}}js/jquery.textcomplete.js"></script> -->
     <!-- Mentions -->
