--- a/skyfolk/templates/django_messages/base.html
+++ b/skyfolk/templates/django_messages/base.html
@@ -16,7 +16,7 @@
 
 {% block content %}
   <div class="col-lg-12 col-md-12 col-sm-12 wrapper">
-  <nav class="col-lg-3 col-md-12 col-sm-12 menu-messages">
+  <nav id="nav-menu-messages" class="col-lg-3 col-md-12 col-sm-12 menu-messages">
       <a onclick="window.location.href='/messages/inbox'"><i class="fa fa-inbox"></i><br>Inbox</a>
       <a onclick="window.location.href='/messages/compose'"><i class="fa fa-plus"></i><br>Componer</a>
       <a onclick="window.location.href='/messages/outbox'"><i class="fa fa-lock"></i><br>Enviados</a>
