+ V2 + Separación de miperfil.sass en -> miperfil.sass y core.sass

--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -1,6 +1,16 @@
 @charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
-@import url(http://fonts.googleapis.com/css?family=Pacifico);
+@font-face {
+  font-family: "Open Sans";
+  font-weight: 400;
+  font-style: normal;
+  src: url("../fonts/Open-Sans-regular/Open-Sans-regular.eot");
+  src: url("../fonts/Open-Sans-regular/Open-Sans-regular.eot?#iefix") format("embedded-opentype"), local("Open Sans"), local("Open-Sans-regular"), url("../fonts/Open-Sans-regular/Open-Sans-regular.woff2") format("woff2"), url("../fonts/Open-Sans-regular/Open-Sans-regular.woff") format("woff"), url("../fonts/Open-Sans-regular/Open-Sans-regular.ttf") format("truetype"), url("../fonts/Open-Sans-regular/Open-Sans-regular.svg#OpenSans") format("svg"); }
+@font-face {
+  font-family: "Pacifico";
+  font-weight: 400;
+  font-style: normal;
+  src: url("../fonts/Pacifico-regular/Pacifico-regular.eot");
+  src: url("../fonts/Pacifico-regular/Pacifico-regular.eot?#iefix") format("embedded-opentype"), local("Pacifico Regular"), local("Pacifico-regular"), url("../fonts/Pacifico-regular/Pacifico-regular.woff2") format("woff2"), url("../fonts/Pacifico-regular/Pacifico-regular.woff") format("woff"), url("../fonts/Pacifico-regular/Pacifico-regular.ttf") format("truetype"), url("../fonts/Pacifico-regular/Pacifico-regular.svg#Pacifico") format("svg"); }
 body {
   padding: 0;
   margin: auto;
@@ -136,7 +146,7 @@ form {
   position: relative;
   text-align: center;
   font-family: "Open Sans", sans-serif;
-  font-width: 100;
+  font-weight: 100;
   left: 30px; }
 
 /* Estilos para el botón ¿olvido su contraseña? */
@@ -194,10 +204,7 @@ form {
 .form-3 input[type=password] {
   width: 70%;
   position: relative;
-  margin-left: auto;
-  margin-bottom: auto;
-  margin-right: auto;
-  margin-top: 20px;
+  margin: 20px auto auto;
   outline: none;
   -webkit-transition: all 0.3s linear;
   -moz-transition: all 0.3s linear;
@@ -210,11 +217,10 @@ form {
   position: absolute;
   left: 0;
   text-align: center;
-  margin: auto;
   color: #757575;
   border-bottom: 1px solid #bdbdbd;
   width: 100%;
-  margin-bottom: 10px;
+  margin: auto auto 10px;
   font-weight: 100;
   font-family: "Open Sans", sans-serif; }
 
@@ -246,15 +252,12 @@ form {
   .block-formregister #sign_in_register, .block-formregister #sign_up_register {
     position: relative;
     display: inline-block;
-    margin: auto;
     width: 135px;
-    margin-left: 7px;
-    margin-top: 3px;
+    margin: 3px auto auto 7px;
     z-index: 0; }
   .block-formregister #iniciar_sesion, .block-formregister #registrar {
     position: relative;
-    margin: auto;
-    margin-top: -20px;
+    margin: -20px auto auto;
     display: inline-block; }
   .block-formregister .reco-passwd {
     position: absolute;
