--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/comentarios.css" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="{{STATIC_URL}}css/colorbox.css" onload="if(media!='all')media='all'"> <!-- Estilos para la galeria de fotos -->
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/timeline.css" onload="if(media!='all')media='all'">
+    <link rel="stylesheet" href="{{STATIC_URL}}css/miperfil.css" onload="if(media!='all')media='all'">
 {% endblock %}
 
 {% block content %}
