--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -26,7 +26,7 @@
 {% block content %}
     <script async src="{{STATIC_URL}}js/jquery.colorbox.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/profile.js" type="text/javascript"></script>
-    <script async src="{{STATIC_URL}}js/jquery.easytabs.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery.easytabs.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/jquery.hashchange.min.js" type="text/javascript"></script>
 <div class="container">
   <div class="col-lg-8 col-md-6 col-sm-12">
@@ -161,6 +161,17 @@ $(document).ready(function() {
 });
 
 </script> -->
+{% comment %}
+Para el manejo de las pestañas del usuario
+{% endcomment %}
+<script type="text/javascript">
+  $('#tab-container').easytabs({
+        defaultTab: "#li-tab-comentarios",
+        animate: true,
+        animationSpeed: "fast",
+        updateHash: false
+  });
+</script>
 <!-- Busqueda en tab-amigos -->
 <script async>
   var options = {
